fixed bad hamster

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <header class="jumbotron text-center">
-      <img src="/Users/Deborah/Desktop/hamster.jpg" alt=hamster>
+      <img src="./hamster.jpg" alt=hamster>
       <h1> Deborah Lee </h1>
     </header>
 
